operator-deploy/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-device-management/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-deviceManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-device-management
    sas.com/admin: namespace
  name: sas-device-management
spec:
  host: $(INGRESS_HOST)
  path: /deviceManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-device-management
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-deviceManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-device-management
    sas.com/admin: namespace
  name: sas-device-management-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /deviceManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-device-management
  wildcardPolicy: Subdomain
